# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8d5dda4a0666_add_confimed_field_for_user.py  a00e5288a12c_add_user.py  d3249b021437_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
